--- a/OutpatientClinicSolution/OutpatientClinic.Presentation/Views/Account/Login.cshtml
+++ b/OutpatientClinicSolution/OutpatientClinic.Presentation/Views/Account/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@model OutpatientClinic.Presentation.Models.LoginViewModel
 
 @{
-    ViewData["Title"] = "Login";
+    ViewBag.Title = "Login";
 }
 <head>
     <link rel="stylesheet" href="~/css/Login.css" />
