--- a/OutpatientClinicSolution/OutpatientClinic.Presentation/Views/Shared/_Layout.cshtml
+++ b/OutpatientClinicSolution/OutpatientClinic.Presentation/Views/Shared/_Layout.cshtml
@@ -118,6 +118,30 @@
         @RenderBody()
     </div>
 
+
+    <!-- Bootstrap 5 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
+    <!-- Custom CSS -->
+    <style>
+        .table-hover tbody tr:hover {
+            background-color: #f8f9fa;
+        }
+
+        .card-header {
+            border-radius: 0.375rem 0.375rem 0 0 !important;
+        }
+
+        .form-control:focus {
+            box-shadow: 0 0 0 0.25rem rgba(13,110,253,.25);
+        }
+    </style>
+
+
+
     @* <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script> *@
